# clitrans

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CICD.yml
completions/bash/: clitrans.bash
completions/elvish/: clitrans.elv
completions/fish/: clitrans.fish
completions/powershell/: _clitrans.ps1
completions/zsh/: _clitrans
src/: bing.rs  cli.rs  lib.rs  main.rs  translation.rs  youdao.rs
src/engine/: bing.rs  mod.rs  youdao.rs
src/engine/bing/: mod.rs  test.rs  test_data.json
src/engine/youdao/: mod.rs  test.rs  test_data.json
src/util/: audio.rs  build.rs  html.rs  mod.rs
tests/engine/: mod.rs
tests/engine/bing/: mod.rs  test_data.json
tests/engine/youdao/: mod.rs  test_data.json
