[package]
name = "clitrans"
version = "0.2.1-rc.0"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
description = "Yet another command-line translator"
categories = ["command-line-utilities"]
homepage = "https://github.com/wfxr/clitrans"
keywords = [
    "translator",
    "tool",
]
license = "MIT/Apache-2.0"
exclude = ["/completions"]
repository = "https://github.com/wfxr/clitrans"
edition = "2018"

resolver = "2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
audio = ["rodio"]

[dependencies]
colored = "2.0"
itertools = "0.10"
regex = "1.4"
rodio = { version = "0.13", optional = true }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", features = ["wrap_help", "color"], default-features = false }

[target.'cfg(not(target_env = "musl"))'.dependencies.isahc]
version = "1.1"
default-features = false
features = ["text-decoding"]
[target.'cfg(target_env = "musl")'.dependencies.isahc]
version = "1.1"
default-features = false
features = ["text-decoding", "static-ssl"]

[profile.release]
lto = true
codegen-units = 1

[build-dependencies]
structopt = { version = "0.3", features = ["wrap_help"], default-features = false }
