[package]
name = "clitrans"
version = "0.3.6-dev"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
description = "Yet another command-line translator"
categories = ["command-line-utilities"]
homepage = "https://github.com/wfxr/clitrans"
keywords = [
    "translator",
    "tool",
    "cli"
]
license = "MIT/Apache-2.0"
exclude = ["/completions"]
repository = "https://github.com/wfxr/clitrans"
edition = "2018"
resolver = "2"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full"]
full = ["audio"]
audio = ["rodio"]

[dependencies]
colored = "^2.0"
itertools = "^0.10"
regex = "^1.4"
scraper = "^0.13"
url = "^2.3"
rodio = { version = "^0.16", optional = true }
lazy_static = "^1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
anyhow = "^1.0.68"
cfg-if = "^1.0.0"
rustyline = "^10.0.0"

[dependencies.structopt]
version = "^0.3"
default-features = false
features = ["wrap_help", "color"]

[target.'cfg(not(target_env = "musl"))'.dependencies.isahc]
version = "^1.7"
default-features = false
features = ["text-decoding"]
[target.'cfg(target_env = "musl")'.dependencies.isahc]
version = "^1.7"
default-features = false
features = ["text-decoding", "static-ssl"]

[build-dependencies]
quote = "^1.0.33"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", features = ["raw_value"] }
xshell = "^0.2.2"

[build-dependencies.structopt]
version = "^0.3"
features = ["wrap_help"]
default-features = false

[profile.release]
lto = true
codegen-units = 1
