[package]
name = "clitrans"
version = "0.4.1"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
description = "Yet another command-line translator"
categories = ["command-line-utilities"]
homepage = "https://github.com/wfxr/clitrans"
keywords = [
    "translator",
    "tool",
    "cli"
]
license = "MIT/Apache-2.0"
exclude = ["/completions"]
repository = "https://github.com/wfxr/clitrans"
edition = "2018"
resolver = "2"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full"]
full = ["audio"]
audio = ["rodio"]

[dependencies]
colored = "2"
itertools = "0.14"
regex = "1"
scraper = "0.23"
url = "2.5"
rodio = { version = "0.21", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
cfg-if = "1"
rustyline = "15"
clap = { version = "4", features = ["wrap_help", "derive", "env", "color"] }
clap_complete = { version = "4" }
constcat = "0.6"
ureq = { version = "2", features = ["proxy-from-env", "json", "socks-proxy"] }

[build-dependencies]
anyhow = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
xshell = "0.2"

[profile.release]
lto = true
